force-app/main/default/objects/LDC_Weather_Report__c/LDC_Weather_Report__c.object-meta.xml
<CustomObject>
    <description>LDC - This object is created to persist weather reports for an Account or a User</description>
    <label>Weather Report</label>
    <nameField>
        <label>Weather Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weather Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>