force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>LDC_Date_Sent__c</fullName>
    <description>This field store the Datetime when the email has been sent to users or Accounts</description>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>