force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Humidity__c.field-meta.xml
<CustomField>
    <fullName>LDC_Humidity__c</fullName>
    <description>This field describes humidity conditions at a certain moment</description>
    <label>Humidity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>