force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Location_Report__c.field-meta.xml
<CustomField>
    <fullName>LDC_Location_Report__c</fullName>
    <description>LDC - This field is used to persist latlng received by the service</description>
    <label>Location Report</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>