force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Temperature__c.field-meta.xml
<CustomField>
    <fullName>LDC_Temperature__c</fullName>
    <description>This field describes temperatures at a certain moment showed in Celsius</description>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>