force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Weather_Account__c.field-meta.xml
<CustomField>
    <fullName>LDC_Weather_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the weather report to an Account lookup relationship</description>
    <label>Weather Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Weather Reports</relationshipLabel>
    <relationshipName>LDC_Weather_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>