force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Weather_Condition__c.field-meta.xml
<CustomField>
    <fullName>LDC_Weather_Condition__c</fullName>
    <description>This field describes weather conditions at a certain moment</description>
    <label>Weather Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>