force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Weather_User__c.field-meta.xml
<CustomField>
    <fullName>LDC_Weather_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the report to a User</description>
    <label>Weather User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LDC_User_Weather_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>