force-app/main/default/objects/LDC_Weather_Report__c/fields/LDC_Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>LDC_Wind_Speed__c</fullName>
    <description>This field describes wind speed at a certain moment showed in km/h</description>
    <label>Wind Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>